# terminal-bear-game

./: .gitignore  Cargo.toml  README.md
src/: app.rs  art.rs  bear.rs  events.rs  llm.rs  main.rs  persistence.rs  time.rs
src/ui/: home.rs  mod.rs  screens.rs  setup.rs
